objects/Export_to_Finance_Plugin__mdt.object
<CustomObject>
    <description>Export to Finance Plugins allow insertion of local Apex logic into the package logic</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This field determines whether the Export to Finance Plugin is active. If unchecked, the logic will not run.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>The name of the Apex class which contains the plugin logic</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <inlineHelpText>The namespace for the Apex plugin code. Leave empty for local classes.</inlineHelpText>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plugin_Key__c</fullName>
        <inlineHelpText>This field references the plugin key specified in the Export to Finance plugins class and drives at which point in the package the custom Apex logic will run.</inlineHelpText>
        <label>Plugin Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Export_Settings__c</fullName>
        <label>Transaction Export Settings</label>
        <referenceTo>Transaction_Export_Settings__mdt</referenceTo>
        <relationshipLabel>Export to Finance Plugins</relationshipLabel>
        <relationshipName>Export_to_Finance_Plugins</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Export to Finance Plugin</label>
    <pluralLabel>Export to Finance Plugins</pluralLabel>
</CustomObject>